...
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:layout_weight=".10" />

                <TextView
                    android:id="@+id/poke_name"
                    android:textSize="30sp"
                    android:layout_width="0sp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50" />

...
                    android:layout_height="wrap_content"
                    android:id="@+id/entry"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/abil1"
                    android:clickable="true"
                    android:focusable="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
