...
        <item name="16">dark</item>
        <item name="17">steel</item>
        <item name="18">fairy</item>
    </string-array>

    <string-array name="vega">
        <item>Nimbleaf</item>
        <item>Parsleaf</item>
        <item>Caudaleaf</item>
        <item>Peyero</item>
        <item>Infiris</item>
        <item>Astignite</item>
        <item>Liquiput</item>
        <item>Hydrush</item>
...
